# estuary

./: .gitignore  Cargo.toml  FEATURES.md  PLAN_REMAINING.md  PROJECT.md  README.md  ROADMAP.md  flake.nix  go.mod  go.sum  install.sh  package-lock.json  package.json  plan.md  tsconfig.json
.github/workflows/: release.yml
.planning/: STATE.md
.planning/phase-1-pty-integration/: PLAN.md
.planning/phase-2-linear-integration/: PLAN.md  RESEARCH.md  SUMMARY.md
cmd/estuary/: main.go
internal/app/: embedded_terminal_model.go  host_chrome.go  model.go  model_picker.go  model_test.go  palette_model.go  terminal_keys.go  terminal_keys_test.go  terminal_session.go  terminal_session_test.go  terminal_trace.go  theme.go  theme_test.go  tmux.go
internal/boundaries/: profiles.go  profiles_test.go
internal/chat/: service.go
internal/docs/: docs_test.go
internal/domain/: types.go
internal/habitats/: models.go  registry.go  registry_test.go  runtime.go
internal/handoff/: service.go  service_test.go
internal/migration/: service.go
internal/prereq/: probe.go
internal/providers/: claude.go  claude_sdk_bridge.mjs  claude_terminal.go  codex.go  codex_terminal.go  directory.go  directory_test.go  manager.go  terminal_adapter.go  terminal_adapter_test.go
internal/pty/: manager.go  overlay.go  overlay_test.go
internal/ptyenv/: env.go  env_test.go
internal/store/: schema.go  (+2 more)
rust/estuary-rs/: Cargo.toml  README.md
rust/estuary-rs/src/: chrome.rs  handoff.rs  keyboard.rs  main.rs  providers.rs  store.rs  terminal.rs  types.rs
src/: App.tsx  config.ts  types.ts
(+30 files in other folders)
